# fizzbuzz-exercise

./: .git-mit.toml.dist  Justfile  README.md  fizzbuzz.py  pyproject.toml  test_fizzbuzz.py
